name:                collab
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              dennis84
maintainer:          d.dietrich84@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable collab
  main-is: Collab.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base              >= 4      && <5
    , text              >= 0.10   && < 0.12
    , transformers      >= 0.3
    , http-types        >= 0.7
    , websockets        >= 0.8

  default-language:    Haskell2010
